adds show site to readme

--- a/README
+++ b/README
@@ -5,3 +5,5 @@ This is a small app designed to allow people to put their Facebook relationships
 E-breaux was a fictional application in the E-Geaux Fringe Festival show I did along with Joe Price, Chuck Harmston, Amy Couchoud, Catherine Deadman, Julie Garner, Derek Hills, Jason Pittman, and Hannah Proferl.  The idea was that it would "smartly" and automatically post comments to your friends' Facebook posts.
 
 This app was made after the show as a prank on Joe Price who was one of the main creative forces behind the show.
+
+For more information checkout: http://pepysinc.com/ 
